--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 # .gitignore
 
 # Data directories (Keep these local only)
-data/
 raw_data/
-extracted_data/
+extracted/
+processed/
 
 # Python artifacts
 __pycache__/
