- Embedding Generation: Utilizes sentence-transformers/all-MiniLM-L6-v2 for encoding text chunks into 384-dimensional dense vectors     - Vector Storage: FAISS IndexFlatIP implementation for efficient cosine similarity search via inner product     - Semantic Retrieval: Top-k retrieval with configurable batch processing and similarity scoring     - LLM Integration: Llama-2-7b for context-aware answer generation from retrieved chunks

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,19 @@
-# .gitignore
+# ==============================
+# Data directories
+# Track folder structure, ignore contents
+# ==============================
+data/**
+!data/**/.gitkeep
 
-# Data directories (Keep these local only)
-data/
-raw_data/
-extracted/
-processed/
-
+# ==============================
 # Python artifacts
+# ==============================
 __pycache__/
 *.pyc
-venv/
-.env
 
-# Python virtual environment
+# Virtual environments
+venv/
 .venv/
+
+# Environment variables
+.env
