--- a/config/config.yaml
+++ b/config/config.yaml
@@ -2,9 +2,12 @@ chunking:
   max_rows: 15
   max_tokens: 500
   min_tokens: 40
-top_k: 5
+embeddings:
+  embeddings_batch_size: 32
 model_name: sentence-transformers/all-MiniLM-L6-v2
 faiss_index_path: data/faiss.index
 raw_data_path: "/home/athenaik/MASTER_THESIS/data/raw"
 extracted_data_path: "/home/athenaik/MASTER_THESIS/data/extracted"
 processed_data_path: "/home/athenaik/MASTER_THESIS/data/processed"
+embeddings_data_path: "/home/athenaik/MASTER_THESIS/data/embeddings"
+top_k: 5
