--- a/config/config.yaml
+++ b/config/config.yaml
@@ -10,4 +10,5 @@ raw_data_path: "/home/athenaik/MASTER_THESIS/data/raw"
 extracted_data_path: "/home/athenaik/MASTER_THESIS/data/extracted"
 processed_data_path: "/home/athenaik/MASTER_THESIS/data/processed"
 embeddings_data_path: "/home/athenaik/MASTER_THESIS/data/embeddings"
+test_data_path: "/home/athenaik/MASTER_THESIS/data/test_data/test_questions.jsonl"
 top_k: 5
